Finished with Index View (Basic)

--- a/HiringTest1/Content/HomePage.css
+++ b/HiringTest1/Content/HomePage.css
@@ -1,1 +1,7 @@
-﻿
+﻿.container .thumbContainer .noteThumbnail {
+    display: inline-block;
+}
+
+.container .upperSection{
+    margin-left: 150px;
+}
