--- a/HiringTest1/Views/Shared/_NoteThumbnailsPartial.cshtml
+++ b/HiringTest1/Views/Shared/_NoteThumbnailsPartial.cshtml
@@ -2,6 +2,11 @@
 
 @{int count = 0; }
 
+@if (Model.Count() == 0)
+{
+    <p>No New Notes...</p>
+}
+
 @foreach (var item in Model)
 {
     if (count == 3)
@@ -14,10 +19,10 @@
             <div class="panel-heading">
                 @item.Title
                 <div class="pull-right">
-                    <a class="edit-link" href="#">
+                    <a class="edit-link" data-id="@item.Id" href="">
                         <span class="glyphicon glyphicon-pencil"></span>
                     </a>
-                    <a class="delete-link" href="#">
+                    <a class="delete-link" data-id="@item.Id" href="#">
                         <span class="glyphicon glyphicon-remove"></span>
                     </a>
                 </div>
