--- a/HiringTest1/Views/Shared/_NoteThumbnailsPartial.cshtml
+++ b/HiringTest1/Views/Shared/_NoteThumbnailsPartial.cshtml
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="panel-body">@item.ShortText</div>
-            <div class="panel-footer">@item.Date.ToShortDateString()<span class="pull-right">@item.Date.ToShortTimeString()</span></div>
+            <div class="panel-footer">@item.CreatedAt.ToShortDateString()<span class="pull-right">@item.CreatedAt.ToShortTimeString()</span></div>
         </div>
     </div>
     count++;
